--- a/Scripts/Tripadvisor_hotel_web_scraping.ipynb
+++ b/Scripts/Tripadvisor_hotel_web_scraping.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,13 @@
     "import multiprocessing as mp\n",
     "import requests\n",
     "import shutil\n",
+    "import time\n",
     "import os\n",
-    "import csv"
+    "import csv\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.desired_capabilities import DesiredCapabilities\n",
+    "from selenium.webdriver.firefox.options import Options as FirefoxOptions"
    ]
   },
   {
@@ -78,13 +83,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CSV files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Best Hotels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#try:\n",
+    "#    writer = csv.DictWriter(open('tripadvisor_best_hotels_data.csv', 'w', encoding='UTF8'), fieldnames=COLUMNS_NAME)\n",
+    "#    writer.writeheader()\n",
+    "#except IOError:\n",
+    "#    print(\"I/O error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Worst Hotels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    writer = csv.DictWriter(open('tripadvisor_hotels_data.csv', 'w', encoding='UTF8'), fieldnames=COLUMNS_NAME)\n",
+    "    writer = csv.DictWriter(open('tripadvisor_worst_hotels_data.csv', 'w', encoding='UTF8'), fieldnames=COLUMNS_NAME)\n",
     "    writer.writeheader()\n",
     "except IOError:\n",
     "    print(\"I/O error\")"
@@ -106,8 +145,7 @@
     "def get_reviews_info(reviews, row, page):\n",
     "    # Expand the review\n",
     "    scroll_down(4500)\n",
-    "    wait_until(S(\"//span[text()='Read more']\").exists)\n",
-    "    sleep(7)\n",
+    "    wait_until(S(\"//span[text()='Read more']\").exists, 60)\n",
     "    \n",
     "    try:\n",
     "        click('Read more')\n",
@@ -120,12 +158,12 @@
     "            # REVIEW_TEXT\n",
     "            row[COLUMNS_NAME[7]] = review.find('div', class_='fIrGe _T').text\n",
     "            try:\n",
-    "                print('Hotel: ' + row[COLUMNS_NAME[0]] + ' - ' + 'Review: ' + str(x+1) + ' - Page: ' + str(page))\n",
+    "                print('Hotel: ' + row[COLUMNS_NAME[0]] + ' - ' + 'Review: ' + str(x+1) + ' - Page: ' + str(page+1))\n",
     "                writer.writerow(row)\n",
     "            except IOError:\n",
     "                print(\"I/O error\")\n",
     "    except:\n",
-    "        print('ERROR: ' + 'Hotel: ' + row[COLUMNS_NAME[0]] + ' - ' + 'Review: ' + str(x+1) + ' - Page: ' + str(page+1))\n"
+    "        print('ERROR')\n"
    ]
   },
   {
@@ -150,7 +188,7 @@
     "        \n",
     "        # Goes to the hotel's reviews\n",
     "        browser = start_firefox(url=row[COLUMNS_NAME[4]], headless=True)\n",
-    "        wait_until(S(\"//div[@class='jvqAy']\").exists)\n",
+    "        wait_until(S(\"//div[@class='jvqAy']\").exists, 30)\n",
     "        sleep(10)\n",
     "        reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "\n",
@@ -161,7 +199,11 @@
     "            reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "            get_reviews_info(reviews_soup.find_all('div', class_='YibKl MC R2 Gi z Z BB pBbQr'), row, y)\n",
     "            # Goes to the next reviews page\n",
-    "            go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "            try:\n",
+    "                go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "            except:\n",
+    "                print('Max review page')\n",
+    "                break\n",
     "            \n",
     "        kill_browser()\n",
     "        "
@@ -173,15 +215,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(threadNumber, URL, max_hotel_pages):\n",
-    "    errors = 0\n",
+    "def get_best_hotels_data(threadNumber, URL, max_hotel_pages):\n",
+    "    Config.implicit_wait_secs = 30\n",
     "    browser = start_firefox(url=URL, headless=True)\n",
     "    # Press \"See all\" button to show the navigation menu\n",
-    "    wait_until(S(\"//span[text()='Check In']\").exists)\n",
+    "    wait_until(S(\"//span[text()='Check In']\").exists, 30)\n",
     "    sleep(3)\n",
     "    press(END)\n",
     "    scroll_up(600)\n",
-    "    wait_until(Button('See all').exists)\n",
+    "    wait_until(Button('See all').exists, 30)\n",
     "    sleep(2)\n",
     "    click('See all')\n",
     "    sleep(15)\n",
@@ -192,9 +234,67 @@
     "        set_driver(browser)\n",
     "        press(END)\n",
     "        click('Next')\n",
-    "        wait_until(S(\"//span[text()='Check In']\").exists)\n",
+    "        wait_until(S(\"//span[text()='Check In']\").exists, 30)\n",
     "        sleep(3)\n",
     "        \n",
+    "    kill_browser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_worst_hotels_data(URL):\n",
+    "    # Setting browser settings\n",
+    "    Config.implicit_wait_secs = 30\n",
+    "    options = webdriver.FirefoxOptions()\n",
+    "    options.preferences[\"permissions.default.geo\"] = 1\n",
+    "    # Start the browser\n",
+    "    browser = start_firefox(url=URL, options=options, headless=True)\n",
+    "    wait_until(S(\"//span[@class='title-match']\").exists, 30)\n",
+    "    # Get html source code of the website\n",
+    "    soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "    hotels = soup.find_all('div', class_='ui_columns is-mobile result-content-columns')\n",
+    "    \n",
+    "    for x in range(len(hotels)):\n",
+    "        hotel = hotels[x]\n",
+    "        row = {}\n",
+    "\n",
+    "        # HOTEL_RATING\n",
+    "        row[COLUMNS_NAME[1]] = hotel.find('div', class_='prw_rup prw_common_responsive_rating_and_review_count').find('span').get('alt')\n",
+    "        # HOTEL_REVIEW_LINK\n",
+    "        row[COLUMNS_NAME[4]] = ROOT_URL + hotel.find('a', class_='review_count').get('href')\n",
+    "\n",
+    "        # Goes to the hotel's reviews\n",
+    "        go_to(url=row[COLUMNS_NAME[4]])\n",
+    "        wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 30)\n",
+    "        wait_until(lambda: len(browser.page_source) > 0, 60)\n",
+    "        print(len(browser.page_source))\n",
+    "        reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "        \n",
+    "        # HOTEL_NAME\n",
+    "        row[COLUMNS_NAME[0]] = reviews_soup.find('h1', class_='QdLfr b d Pn').text\n",
+    "        # HOTEL_LOCATION\n",
+    "        row[COLUMNS_NAME[3]] = reviews_soup.find('span', class_='fHvkI PTrfg').text\n",
+    "        # HOTEL_PRICE\n",
+    "        if(reviews_soup.find('div', class_='WXMFC b') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b').text\n",
+    "        elif(reviews_soup.find('div', class_='JPNOn b Wi') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='JPNOn b Wi').text\n",
+    "        elif(reviews_soup.find('div', class_='WXMFC b autoResize') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b autoResize').text\n",
+    "\n",
+    "        for y in range(MAX_REVIEW_PAGES):\n",
+    "            reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "            get_reviews_info(reviews_soup.find_all('div', class_='YibKl MC R2 Gi z Z BB pBbQr'), row, y)\n",
+    "            # Goes to the next reviews page\n",
+    "            try:\n",
+    "                go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "            except:\n",
+    "                print('Max review page')\n",
+    "                break\n",
     "    kill_browser()"
    ]
   },
@@ -211,7 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_data(4, 'https://www.tripadvisor.com/Hotels-g4-Europe-Hotels.html', MAX_HOTEL_PAGES)"
+    "#get_data(4, 'https://www.tripadvisor.com/Hotels-g4-Europe-Hotels.html', MAX_HOTEL_PAGES)\n",
+    "get_worst_hotels_data('https://www.tripadvisor.com/Search?q=worst%20hotel&searchSessionId=CFC88E23E91B7FA8D0D751E5DEE9F5D31663450804735ssid&sid=9D518B65B4454EF1A82B6656FCF7E39F1663452594116&blockRedirect=true&ssrc=h&isSingleSearch=true&geo=1&rf=3')"
    ]
   }
  ],
