Add web scaping by list (csv file)

--- a/Scripts/Tripadvisor_hotel_web_scraping.ipynb
+++ b/Scripts/Tripadvisor_hotel_web_scraping.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Firefox browser installed!\n",
     "#%pip install helium\n",
     "#%pip install bs4\n",
     "#%pip install pandas\n",
@@ -42,25 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from multiprocessing import Pool\n",
-    "from time import sleep\n",
     "from helium import *\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import multiprocessing as mp\n",
-    "import requests\n",
-    "import shutil\n",
-    "import time\n",
-    "import os\n",
-    "import csv\n",
+    "from time import sleep\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.desired_capabilities import DesiredCapabilities\n",
-    "from selenium.webdriver.firefox.options import Options as FirefoxOptions"
+    "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
+    "import csv"
    ]
   },
   {
@@ -76,10 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLUMNS_NAME = ['HOTEL_NAME', 'HOTEL_RATING', 'HOTEL_PRICE', 'HOTEL_LOCATION', 'HOTEL_REVIEW_LINK', 'REVIEW_RATING', 'REVIEW_DATE', 'REVIEW_TEXT']\n",
+    "COLUMNS_NAME = ['HOTEL_NAME', 'HOTEL_RATING', 'HOTEL_PRICE', 'HOTEL_LOCATION', 'HOTEL_REVIEW_URL', 'REVIEW_RATING', 'REVIEW_DATE', 'REVIEW_HELPFUL_VOTES', 'REVIEW_TEXT']\n",
     "ROOT_URL = 'https://www.tripadvisor.com/'\n",
     "MAX_HOTEL_PAGES = 1\n",
-    "MAX_REVIEW_PAGES = 200"
+    "MAX_REVIEW_PAGES = 2\n",
+    "URL_COLUMN_NAME = 'HOTEL_URL'"
    ]
   },
   {
@@ -103,7 +99,7 @@
    "outputs": [],
    "source": [
     "#try:\n",
-    "#    writer = csv.DictWriter(open('tripadvisor_best_hotels_data.csv', 'w', encoding='UTF8'), fieldnames=COLUMNS_NAME)\n",
+    "#    writer = csv.DictWriter(open('tripadvisor_best_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
     "#    writer.writeheader()\n",
     "#except IOError:\n",
     "#    print(\"I/O error\")"
@@ -122,8 +118,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#try:\n",
+    "#    writer = csv.DictWriter(open('tripadvisor_worst_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
+    "#    writer.writeheader()\n",
+    "#except IOError:\n",
+    "#    print(\"I/O error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hotels by list (CSV file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
-    "    writer = csv.DictWriter(open('tripadvisor_worst_hotels_data.csv', 'w', encoding='UTF8'), fieldnames=COLUMNS_NAME)\n",
+    "    writer = csv.DictWriter(open('tripadvisor_hotels_by_list.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
     "    writer.writeheader()\n",
     "except IOError:\n",
     "    print(\"I/O error\")"
@@ -142,21 +158,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def start_browser(URL=None):\n",
+    "    # Setting browser settings\n",
+    "    Config.implicit_wait_secs = 30\n",
+    "    options = webdriver.FirefoxOptions()\n",
+    "    options.preferences[\"permissions.default.geo\"] = 1\n",
+    "    if(URL != None):\n",
+    "        return start_firefox(url=URL, options=options, headless=True)\n",
+    "    else:\n",
+    "        return start_firefox(options=options, headless=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_reviews_info(reviews, row, page):\n",
-    "    # Expand the review\n",
     "    scroll_down(4500)\n",
     "    wait_until(S(\"//span[text()='Read more']\").exists, 60)\n",
     "    \n",
     "    try:\n",
+    "        # Expand the review\n",
     "        click('Read more')\n",
+    "        # Get review's info\n",
     "        for x in range(len(reviews)):\n",
     "            review = reviews[x]\n",
     "            # REVIEW_RATING\n",
     "            row[COLUMNS_NAME[5]] = review.find('div', class_='Hlmiy F1').find_all('span')[0].get('class')[1]\n",
     "            # REVIEW_DATE\n",
     "            row[COLUMNS_NAME[6]] = review.find('span', class_='teHYY _R Me S4 H3').text\n",
+    "            # REVIEW_HELPFUL_VOTES\n",
+    "            if(review.find('span', class_='hVSKz S2 H2 Ch sJlxi') != None):\n",
+    "                row[COLUMNS_NAME[7]] = review.find('span', class_='hVSKz S2 H2 Ch sJlxi').text\n",
     "            # REVIEW_TEXT\n",
-    "            row[COLUMNS_NAME[7]] = review.find('div', class_='fIrGe _T').text\n",
+    "            row[COLUMNS_NAME[8]] = review.find('div', class_='fIrGe _T').text\n",
     "            try:\n",
     "                print('Hotel: ' + row[COLUMNS_NAME[0]] + ' - ' + 'Review: ' + str(x+1) + ' - Page: ' + str(page+1))\n",
     "                writer.writerow(row)\n",
@@ -201,6 +238,7 @@
     "            # Goes to the next reviews page\n",
     "            try:\n",
     "                go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "                reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "            except:\n",
     "                print('Max review page')\n",
     "                break\n",
@@ -215,15 +253,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_hotels_data(threadNumber, URL, max_hotel_pages):\n",
-    "    Config.implicit_wait_secs = 30\n",
-    "    browser = start_firefox(url=URL, headless=True)\n",
+    "def get_hotels_data_by_location(URL, max_hotel_pages):\n",
+    "    # Start the browser\n",
+    "    browser = start_browser(URL)\n",
     "    # Press \"See all\" button to show the navigation menu\n",
-    "    wait_until(S(\"//span[text()='Check In']\").exists, 30)\n",
+    "    wait_until(S(\"//span[text()='Check In']\").exists, 60)\n",
+    "    wait_until(lambda: len(browser.page_source) > 0, 60)\n",
     "    sleep(3)\n",
     "    press(END)\n",
     "    scroll_up(600)\n",
-    "    wait_until(Button('See all').exists, 30)\n",
+    "    wait_until(Button('See all').exists, 60)\n",
     "    sleep(2)\n",
     "    click('See all')\n",
     "    sleep(15)\n",
@@ -234,7 +273,7 @@
     "        set_driver(browser)\n",
     "        press(END)\n",
     "        click('Next')\n",
-    "        wait_until(S(\"//span[text()='Check In']\").exists, 30)\n",
+    "        wait_until(S(\"//span[text()='Check In']\").exists, 60)\n",
     "        sleep(3)\n",
     "        \n",
     "    kill_browser()"
@@ -246,14 +285,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_worst_hotels_data(URL):\n",
-    "    # Setting browser settings\n",
-    "    Config.implicit_wait_secs = 30\n",
-    "    options = webdriver.FirefoxOptions()\n",
-    "    options.preferences[\"permissions.default.geo\"] = 1\n",
+    "def get_hotels_data_by_search(URL):\n",
     "    # Start the browser\n",
-    "    browser = start_firefox(url=URL, options=options, headless=True)\n",
-    "    wait_until(S(\"//span[@class='title-match']\").exists, 30)\n",
+    "    browser = start_browser(URL)\n",
+    "    wait_until(S(\"//span[@class='title-match']\").exists, 60)\n",
     "    # Get html source code of the website\n",
     "    soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "    hotels = soup.find_all('div', class_='ui_columns is-mobile result-content-columns')\n",
@@ -299,6 +334,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hotels_by_list(csv_path, column_name, max_review_pages):\n",
+    "    hotels_df = pd.read_csv(csv_path)\n",
+    "    hotels = hotels_df[column_name].to_list()\n",
+    "    browser = start_browser()\n",
+    "\n",
+    "    for x in range(len(hotels)):\n",
+    "        row = {}\n",
+    "        go_to(hotels[x])\n",
+    "        wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 30)\n",
+    "        wait_until(lambda: len(browser.page_source) > 0, 60)\n",
+    "        reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "\n",
+    "        # HOTEL_NAME\n",
+    "        row[COLUMNS_NAME[0]] = reviews_soup.find('h1', class_='QdLfr b d Pn').text\n",
+    "        # HOTEL_RATING\n",
+    "        row[COLUMNS_NAME[1]] = reviews_soup.find('a', class_='BNPpl q wfOFe _T Gi').find('span').get('class')[1]\n",
+    "        # HOTEL_PRICE\n",
+    "        if(reviews_soup.find('div', class_='WXMFC b') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b').text\n",
+    "        elif(reviews_soup.find('div', class_='JPNOn b Wi') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='JPNOn b Wi').text\n",
+    "        elif(reviews_soup.find('div', class_='WXMFC b autoResize') != None):\n",
+    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b autoResize').text\n",
+    "        # HOTEL_LOCATION\n",
+    "        row[COLUMNS_NAME[3]] = reviews_soup.find('span', class_='fHvkI PTrfg').text\n",
+    "        # HOTEL_REVIEW_LINK\n",
+    "        row[COLUMNS_NAME[4]] = hotels[x]\n",
+    "\n",
+    "        for y in range(max_review_pages):\n",
+    "            reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "            get_reviews_info(reviews_soup.find_all('div', class_='YibKl MC R2 Gi z Z BB pBbQr'), row, y)\n",
+    "            # Goes to the next reviews page\n",
+    "            try:\n",
+    "                go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "                wait_until(lambda: len(browser.page_source) > 0, 60)\n",
+    "            except:\n",
+    "                print('Max review page')\n",
+    "                break\n",
+    "    kill_browser()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -311,8 +393,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get_data(4, 'https://www.tripadvisor.com/Hotels-g4-Europe-Hotels.html', MAX_HOTEL_PAGES)\n",
-    "get_worst_hotels_data('https://www.tripadvisor.com/Search?q=worst%20hotel&searchSessionId=CFC88E23E91B7FA8D0D751E5DEE9F5D31663450804735ssid&sid=9D518B65B4454EF1A82B6656FCF7E39F1663452594116&blockRedirect=true&ssrc=h&isSingleSearch=true&geo=1&rf=3')"
+    "#get_hotels_data_by_location('https://www.tripadvisor.com/Hotels-g4-Europe-Hotels.html', MAX_HOTEL_PAGES)\n",
+    "#get_hotels_data_by_search('https://www.tripadvisor.com/Search?q=worst%20hotel&searchSessionId=CFC88E23E91B7FA8D0D751E5DEE9F5D31663450804735ssid&sid=9D518B65B4454EF1A82B6656FCF7E39F1663452594116&blockRedirect=true&ssrc=h&isSingleSearch=true&geo=1&rf=3')\n",
+    "get_hotels_by_list('tripadvisor_hotel_list_test.csv', URL_COLUMN_NAME, MAX_REVIEW_PAGES)"
    ]
   }
  ],
