--- a/Scripts/Tripadvisor_hotel_web_scraping.ipynb
+++ b/Scripts/Tripadvisor_hotel_web_scraping.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hotels by list (CSV file)"
+    "#### Hotels by list (CSV file)"
    ]
   },
   {
