--- a/Scripts/Tripadvisor_hotel_web_scraping.ipynb
+++ b/Scripts/Tripadvisor_hotel_web_scraping.ipynb
@@ -71,18 +71,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLUMNS_NAME = ['HOTEL_NAME', 'HOTEL_RATING', 'HOTEL_PRICE', 'HOTEL_LOCATION', 'HOTEL_REVIEW_URL', 'REVIEW_RATING', 'REVIEW_DATE', 'REVIEW_HELPFUL_VOTES', 'REVIEW_TEXT']\n",
+    "COLUMNS_NAME = ['HOTEL_NAME', 'HOTEL_RATING', 'HOTEL_PRICE', 'HOTEL_LOCATION', 'HOTEL_REVIEW_URL', 'REVIEW_RATING', 'REVIEW_DATE', 'REVIEW_HELPFUL_VOTES', 'REVIEW_TEXT'] # The columns header of the output CSV files.\n",
     "ROOT_URL = 'https://www.tripadvisor.com/'\n",
-    "MAX_HOTEL_PAGES = 1\n",
-    "MAX_REVIEW_PAGES = 2\n",
-    "URL_COLUMN_NAME = 'HOTEL_URL'"
+    "MAX_HOTEL_PAGES = 1 # The maximum number of hotel pages that the script will scrapes. (used in get_hotels_data_by_location() method)\n",
+    "MAX_REVIEW_PAGES = 2 # The maximum  number of review pages that the script will scrapes for each hotel. (used in get_hotels_data_by_location(), get_hotels_data_by_search(), and get_hotels_by_list())\n",
+    "URL_COLUMN_NAME = 'Tripadvisor' # The name of the column containing the URL of the hotels in the CSV input file. (used in get_hotels_by_list() method)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CSV files"
+    "### CSV Output files"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "#try:\n",
-    "#    writer = csv.DictWriter(open('tripadvisor_best_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
+    "#    writer = csv.DictWriter(open('../Data/outputs/tripadvisor_best_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
     "#    writer.writeheader()\n",
     "#except IOError:\n",
     "#    print(\"I/O error\")"
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "#try:\n",
-    "#    writer = csv.DictWriter(open('tripadvisor_worst_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
+    "#    writer = csv.DictWriter(open('../Data/outputs/tripadvisor_worst_hotels_data.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
     "#    writer.writeheader()\n",
     "#except IOError:\n",
     "#    print(\"I/O error\")"
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    writer = csv.DictWriter(open('tripadvisor_hotels_by_list.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
+    "    writer = csv.DictWriter(open('../Data/outputs/tripadvisor_hotels_by_list.csv', 'w', encoding='UTF8', newline=''), fieldnames=COLUMNS_NAME, delimiter=',', lineterminator='\\r')\n",
     "    writer.writeheader()\n",
     "except IOError:\n",
     "    print(\"I/O error\")"
@@ -158,6 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# aux method\n",
     "def start_browser(URL=None):\n",
     "    # Setting browser settings\n",
     "    Config.implicit_wait_secs = 30\n",
@@ -175,6 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# aux method\n",
     "def get_reviews_info(reviews, row, page):\n",
     "    scroll_down(4500)\n",
     "    wait_until(S(\"//span[text()='Read more']\").exists, 60)\n",
@@ -200,15 +202,16 @@
     "            except IOError:\n",
     "                print(\"I/O error\")\n",
     "    except:\n",
-    "        print('ERROR')\n"
+    "        print('Error review info')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# aux method\n",
     "def get_hotels_info(hotels, max_review_pages):\n",
     "    for x in range(len(hotels)):\n",
     "        hotel = hotels[x]\n",
@@ -241,8 +244,7 @@
     "                reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "            except:\n",
     "                print('Max review page')\n",
-    "                break\n",
-    "            \n",
+    "                break \n",
     "        kill_browser()\n",
     "        "
    ]
@@ -253,6 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "def get_hotels_data_by_location(URL, max_hotel_pages):\n",
     "    # Start the browser\n",
     "    browser = start_browser(URL)\n",
@@ -275,7 +278,6 @@
     "        click('Next')\n",
     "        wait_until(S(\"//span[text()='Check In']\").exists, 60)\n",
     "        sleep(3)\n",
-    "        \n",
     "    kill_browser()"
    ]
   },
@@ -285,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "def get_hotels_data_by_search(URL):\n",
     "    # Start the browser\n",
     "    browser = start_browser(URL)\n",
@@ -304,7 +307,7 @@
     "\n",
     "        # Goes to the hotel's reviews\n",
     "        go_to(url=row[COLUMNS_NAME[4]])\n",
-    "        wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 30)\n",
+    "        wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 60)\n",
     "        wait_until(lambda: len(browser.page_source) > 0, 60)\n",
     "        print(len(browser.page_source))\n",
     "        reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
@@ -339,44 +342,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "def get_hotels_by_list(csv_path, column_name, max_review_pages):\n",
     "    hotels_df = pd.read_csv(csv_path)\n",
     "    hotels = hotels_df[column_name].to_list()\n",
     "    browser = start_browser()\n",
     "\n",
     "    for x in range(len(hotels)):\n",
-    "        row = {}\n",
-    "        go_to(hotels[x])\n",
-    "        wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 30)\n",
-    "        wait_until(lambda: len(browser.page_source) > 0, 60)\n",
-    "        reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
-    "\n",
-    "        # HOTEL_NAME\n",
-    "        row[COLUMNS_NAME[0]] = reviews_soup.find('h1', class_='QdLfr b d Pn').text\n",
-    "        # HOTEL_RATING\n",
-    "        row[COLUMNS_NAME[1]] = reviews_soup.find('a', class_='BNPpl q wfOFe _T Gi').find('span').get('class')[1]\n",
-    "        # HOTEL_PRICE\n",
-    "        if(reviews_soup.find('div', class_='WXMFC b') != None):\n",
-    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b').text\n",
-    "        elif(reviews_soup.find('div', class_='JPNOn b Wi') != None):\n",
-    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='JPNOn b Wi').text\n",
-    "        elif(reviews_soup.find('div', class_='WXMFC b autoResize') != None):\n",
-    "            row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b autoResize').text\n",
-    "        # HOTEL_LOCATION\n",
-    "        row[COLUMNS_NAME[3]] = reviews_soup.find('span', class_='fHvkI PTrfg').text\n",
-    "        # HOTEL_REVIEW_LINK\n",
-    "        row[COLUMNS_NAME[4]] = hotels[x]\n",
-    "\n",
-    "        for y in range(max_review_pages):\n",
+    "        try:\n",
+    "            row = {}\n",
+    "            go_to(hotels[x])\n",
+    "            wait_until(lambda: S(\"//div[@class='WXMFC b autoResize']\").exists or S(\"//div[@class='WXMFC b']\").exists or S(\"//div[@class='JPNOn b Wi']\").exists, 60)\n",
+    "            wait_until(lambda: len(browser.page_source) > 0, 60)\n",
     "            reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
-    "            get_reviews_info(reviews_soup.find_all('div', class_='YibKl MC R2 Gi z Z BB pBbQr'), row, y)\n",
-    "            # Goes to the next reviews page\n",
-    "            try:\n",
-    "                go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
-    "                wait_until(lambda: len(browser.page_source) > 0, 60)\n",
-    "            except:\n",
-    "                print('Max review page')\n",
-    "                break\n",
+    "\n",
+    "            # Check if the hotel is unclaimed\n",
+    "            if(reviews_soup.find('div', class_='XAnbq _S ZUJme') == None):\n",
+    "                # HOTEL_NAME\n",
+    "                row[COLUMNS_NAME[0]] = reviews_soup.find('h1', class_='QdLfr b d Pn').text\n",
+    "                # HOTEL_RATING\n",
+    "                row[COLUMNS_NAME[1]] = reviews_soup.find('a', class_='BNPpl q wfOFe _T Gi').find('span').get('class')[1]\n",
+    "                # HOTEL_PRICE\n",
+    "                if(reviews_soup.find('div', class_='WXMFC b') != None):\n",
+    "                    row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b').text\n",
+    "                elif(reviews_soup.find('div', class_='JPNOn b Wi') != None):\n",
+    "                    row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='JPNOn b Wi').text\n",
+    "                elif(reviews_soup.find('div', class_='WXMFC b autoResize') != None):\n",
+    "                    row[COLUMNS_NAME[2]] = reviews_soup.find('div', class_='WXMFC b autoResize').text\n",
+    "                # HOTEL_LOCATION\n",
+    "                row[COLUMNS_NAME[3]] = reviews_soup.find('span', class_='fHvkI PTrfg').text\n",
+    "                # HOTEL_REVIEW_LINK\n",
+    "                row[COLUMNS_NAME[4]] = hotels[x]\n",
+    "\n",
+    "                for y in range(max_review_pages):\n",
+    "                    reviews_soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
+    "                    get_reviews_info(reviews_soup.find_all('div', class_='YibKl MC R2 Gi z Z BB pBbQr'), row, y)\n",
+    "                    # Goes to the next reviews page\n",
+    "                    try:\n",
+    "                        go_to(ROOT_URL + reviews_soup.find('a', class_='ui_button nav next primary').get('href'))\n",
+    "                        wait_until(lambda: len(browser.page_source) > 0, 60)\n",
+    "                    except:\n",
+    "                        print('Max review page')\n",
+    "                        break\n",
+    "        except:\n",
+    "            print('Hotel info error')\n",
     "    kill_browser()"
    ]
   },
@@ -395,7 +404,7 @@
    "source": [
     "#get_hotels_data_by_location('https://www.tripadvisor.com/Hotels-g4-Europe-Hotels.html', MAX_HOTEL_PAGES)\n",
     "#get_hotels_data_by_search('https://www.tripadvisor.com/Search?q=worst%20hotel&searchSessionId=CFC88E23E91B7FA8D0D751E5DEE9F5D31663450804735ssid&sid=9D518B65B4454EF1A82B6656FCF7E39F1663452594116&blockRedirect=true&ssrc=h&isSingleSearch=true&geo=1&rf=3')\n",
-    "get_hotels_by_list('tripadvisor_hotel_list_test.csv', URL_COLUMN_NAME, MAX_REVIEW_PAGES)"
+    "get_hotels_by_list('../Data/inputs/Tripadvisor_Hotels.csv', URL_COLUMN_NAME, MAX_REVIEW_PAGES)"
    ]
   }
  ],
