--- a/scripts/qualitative_analysis.ipynb
+++ b/scripts/qualitative_analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\ariza\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\mateo\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
@@ -90,7 +90,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,14 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ariza\\Documents\\GitHub\\Tripadvisor-Hotel\\scripts\\../data/web_scraping/outputs/tripadvisor_hotels_full_data.csv\n"
+      "c:\\Users\\mateo\\Documents\\ia2\\Tripadvisor-Hotel\\scripts\\../data/tripadvisor_hotels_sustainable_reviews.csv\n",
+      "c:\\Users\\mateo\\Documents\\ia2\\Tripadvisor-Hotel\\scripts\\../data/tripadvisor_hotels_other_reviews.csv\n"
      ]
     },
     {
@@ -150,126 +151,143 @@
        "      <th>HOTEL_RATING</th>\n",
        "      <th>HOTEL_PRICE</th>\n",
        "      <th>HOTEL_LOCATION</th>\n",
-       "      <th>HOTEL_REVIEW_LINK</th>\n",
+       "      <th>HOTEL_REVIEW_URL</th>\n",
        "      <th>REVIEW_RATING</th>\n",
        "      <th>REVIEW_DATE</th>\n",
+       "      <th>REVIEW_HELPFUL_VOTES</th>\n",
        "      <th>REVIEW_TEXT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1. Romance Istanbul Hotel</td>\n",
-       "      <td>5 of 5 bubbles</td>\n",
-       "      <td>COP 1,100,014</td>\n",
-       "      <td>Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...</td>\n",
-       "      <td>https://www.tripadvisor.com//Hotel_Review-g293...</td>\n",
+       "      <td>Fairmont Hotel Vier Jahreszeiten</td>\n",
+       "      <td>bubble_45</td>\n",
+       "      <td>COP 1,857,868</td>\n",
+       "      <td>Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany</td>\n",
+       "      <td>https://www.tripadvisor.com/Hotel_Review-g1873...</td>\n",
        "      <td>bubble_50</td>\n",
-       "      <td>Date of stay: September 2022</td>\n",
-       "      <td>This hotel checked off every box we had when l...</td>\n",
+       "      <td>Date of stay: July 2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Location in the heart of the city right next t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1. Romance Istanbul Hotel</td>\n",
-       "      <td>5 of 5 bubbles</td>\n",
-       "      <td>COP 1,100,014</td>\n",
-       "      <td>Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...</td>\n",
-       "      <td>https://www.tripadvisor.com//Hotel_Review-g293...</td>\n",
+       "      <td>Fairmont Hotel Vier Jahreszeiten</td>\n",
+       "      <td>bubble_45</td>\n",
+       "      <td>COP 1,857,868</td>\n",
+       "      <td>Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany</td>\n",
+       "      <td>https://www.tripadvisor.com/Hotel_Review-g1873...</td>\n",
        "      <td>bubble_50</td>\n",
-       "      <td>Date of stay: September 2022</td>\n",
-       "      <td>We turned down a 2 day free 5-star hotel offer...</td>\n",
+       "      <td>Date of stay: August 2022</td>\n",
+       "      <td>1 Helpful vote</td>\n",
+       "      <td>I have never felt more welcome at a hotel/rest...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1. Romance Istanbul Hotel</td>\n",
-       "      <td>5 of 5 bubbles</td>\n",
-       "      <td>COP 1,100,014</td>\n",
-       "      <td>Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...</td>\n",
-       "      <td>https://www.tripadvisor.com//Hotel_Review-g293...</td>\n",
+       "      <td>Fairmont Hotel Vier Jahreszeiten</td>\n",
+       "      <td>bubble_45</td>\n",
+       "      <td>COP 1,857,868</td>\n",
+       "      <td>Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany</td>\n",
+       "      <td>https://www.tripadvisor.com/Hotel_Review-g1873...</td>\n",
        "      <td>bubble_50</td>\n",
        "      <td>Date of stay: July 2022</td>\n",
-       "      <td>Friendly people and great location. Shope and ...</td>\n",
+       "      <td>1 Helpful vote</td>\n",
+       "      <td>we stayed at this Hotel at the end of July,202...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1. Romance Istanbul Hotel</td>\n",
-       "      <td>5 of 5 bubbles</td>\n",
-       "      <td>COP 1,100,014</td>\n",
-       "      <td>Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...</td>\n",
-       "      <td>https://www.tripadvisor.com//Hotel_Review-g293...</td>\n",
+       "      <td>Fairmont Hotel Vier Jahreszeiten</td>\n",
+       "      <td>bubble_45</td>\n",
+       "      <td>COP 1,857,868</td>\n",
+       "      <td>Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany</td>\n",
+       "      <td>https://www.tripadvisor.com/Hotel_Review-g1873...</td>\n",
        "      <td>bubble_50</td>\n",
-       "      <td>Date of stay: September 2022</td>\n",
-       "      <td>Came here with my family and the location is p...</td>\n",
+       "      <td>Date of stay: July 2022</td>\n",
+       "      <td>1 Helpful vote</td>\n",
+       "      <td>Best hotel in Hamburg. From front desk to room...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1. Romance Istanbul Hotel</td>\n",
-       "      <td>5 of 5 bubbles</td>\n",
-       "      <td>COP 1,100,014</td>\n",
-       "      <td>Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...</td>\n",
-       "      <td>https://www.tripadvisor.com//Hotel_Review-g293...</td>\n",
+       "      <td>Fairmont Hotel Vier Jahreszeiten</td>\n",
+       "      <td>bubble_45</td>\n",
+       "      <td>COP 1,857,868</td>\n",
+       "      <td>Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany</td>\n",
+       "      <td>https://www.tripadvisor.com/Hotel_Review-g1873...</td>\n",
        "      <td>bubble_50</td>\n",
-       "      <td>Date of stay: September 2022</td>\n",
-       "      <td>This hotel is wonderful,the best assest they h...</td>\n",
+       "      <td>Date of stay: July 2022</td>\n",
+       "      <td>1 Helpful vote</td>\n",
+       "      <td>Great attention from the team, the location is...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        HOTEL_NAME    HOTEL_RATING    HOTEL_PRICE  \\\n",
-       "0        1. Romance Istanbul Hotel  5 of 5 bubbles  COP 1,100,014   \n",
-       "1        1. Romance Istanbul Hotel  5 of 5 bubbles  COP 1,100,014   \n",
-       "2        1. Romance Istanbul Hotel  5 of 5 bubbles  COP 1,100,014   \n",
-       "3        1. Romance Istanbul Hotel  5 of 5 bubbles  COP 1,100,014   \n",
-       "4        1. Romance Istanbul Hotel  5 of 5 bubbles  COP 1,100,014   \n",
+       "                         HOTEL_NAME HOTEL_RATING    HOTEL_PRICE  \\\n",
+       "0  Fairmont Hotel Vier Jahreszeiten    bubble_45  COP 1,857,868   \n",
+       "1  Fairmont Hotel Vier Jahreszeiten    bubble_45  COP 1,857,868   \n",
+       "2  Fairmont Hotel Vier Jahreszeiten    bubble_45  COP 1,857,868   \n",
+       "3  Fairmont Hotel Vier Jahreszeiten    bubble_45  COP 1,857,868   \n",
+       "4  Fairmont Hotel Vier Jahreszeiten    bubble_45  COP 1,857,868   \n",
        "\n",
        "                                      HOTEL_LOCATION  \\\n",
-       "0  Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...   \n",
-       "1  Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...   \n",
-       "2  Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...   \n",
-       "3  Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...   \n",
-       "4  Hudavendigar Cd. No:5 Sirkeci, Istanbul 34110 ...   \n",
+       "0  Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany   \n",
+       "1  Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany   \n",
+       "2  Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany   \n",
+       "3  Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany   \n",
+       "4  Neuer Jungfernstieg 9 - 14, 20354 Hamburg Germany   \n",
        "\n",
-       "                                   HOTEL_REVIEW_LINK REVIEW_RATING  \\\n",
-       "0  https://www.tripadvisor.com//Hotel_Review-g293...     bubble_50   \n",
-       "1  https://www.tripadvisor.com//Hotel_Review-g293...     bubble_50   \n",
-       "2  https://www.tripadvisor.com//Hotel_Review-g293...     bubble_50   \n",
-       "3  https://www.tripadvisor.com//Hotel_Review-g293...     bubble_50   \n",
-       "4  https://www.tripadvisor.com//Hotel_Review-g293...     bubble_50   \n",
+       "                                    HOTEL_REVIEW_URL REVIEW_RATING  \\\n",
+       "0  https://www.tripadvisor.com/Hotel_Review-g1873...     bubble_50   \n",
+       "1  https://www.tripadvisor.com/Hotel_Review-g1873...     bubble_50   \n",
+       "2  https://www.tripadvisor.com/Hotel_Review-g1873...     bubble_50   \n",
+       "3  https://www.tripadvisor.com/Hotel_Review-g1873...     bubble_50   \n",
+       "4  https://www.tripadvisor.com/Hotel_Review-g1873...     bubble_50   \n",
        "\n",
-       "                    REVIEW_DATE  \\\n",
-       "0  Date of stay: September 2022   \n",
-       "1  Date of stay: September 2022   \n",
-       "2       Date of stay: July 2022   \n",
-       "3  Date of stay: September 2022   \n",
-       "4  Date of stay: September 2022   \n",
+       "                 REVIEW_DATE REVIEW_HELPFUL_VOTES  \\\n",
+       "0    Date of stay: July 2022                  NaN   \n",
+       "1  Date of stay: August 2022       1 Helpful vote   \n",
+       "2    Date of stay: July 2022       1 Helpful vote   \n",
+       "3    Date of stay: July 2022       1 Helpful vote   \n",
+       "4    Date of stay: July 2022       1 Helpful vote   \n",
        "\n",
        "                                         REVIEW_TEXT  \n",
-       "0  This hotel checked off every box we had when l...  \n",
-       "1  We turned down a 2 day free 5-star hotel offer...  \n",
-       "2  Friendly people and great location. Shope and ...  \n",
-       "3  Came here with my family and the location is p...  \n",
-       "4  This hotel is wonderful,the best assest they h...  "
+       "0  Location in the heart of the city right next t...  \n",
+       "1  I have never felt more welcome at a hotel/rest...  \n",
+       "2  we stayed at this Hotel at the end of July,202...  \n",
+       "3  Best hotel in Hamburg. From front desk to room...  \n",
+       "4  Great attention from the team, the location is...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dir = os.path.abspath('')\n",
-    "INPUT_FILE_PATH = '../data/web_scraping/outputs/tripadvisor_hotels_full_data.csv'\n",
+    "SUSTAINABLE_HOTELS_FILE_PATH = '../data/tripadvisor_hotels_sustainable_reviews.csv'\n",
+    "OTHER_HOTELS_FILE_PATH = '../data/tripadvisor_hotels_other_reviews.csv'\n",
     "\n",
-    "full_csv_path = os.path.join(dir, INPUT_FILE_PATH)\n",
-    "print(full_csv_path)\n",
+    "sustainable_csv_path = os.path.join(dir, SUSTAINABLE_HOTELS_FILE_PATH)\n",
+    "print(sustainable_csv_path)\n",
     "\n",
+    "others_csv_path = os.path.join(dir, OTHER_HOTELS_FILE_PATH)\n",
+    "print(others_csv_path)\n",
     "\n",
-    "df = pd.read_csv(full_csv_path)\n",
+    "sustainable_df = pd.read_csv(sustainable_csv_path)\n",
+    "others_df = pd.read_csv(others_csv_path)\n",
     "\n",
-    "df.head()"
+    "sustainable_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -609,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4,
   "vscode": {
