--- a/scripts/create_sustainable_csv.ipynb
+++ b/scripts/create_sustainable_csv.ipynb
@@ -355,7 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "not_sustainable.to_csv('../data/tripadvisor_hotels_others.csv', index=False)"
+    "DATA_PATH = '../data/web_scraping/outputs/tripadvisor_hotels_sustainables_v2.csv'\n",
+    "DATA = pd.read_csv(DATA_PATH)"
    ]
   }
  ],
@@ -375,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
