First look at the Clustering and Summarizer scripts 🐒

--- a/scripts/clustering.ipynb
+++ b/scripts/clustering.ipynb
@@ -384,7 +384,7 @@
     "SUST_HOTEL_DATA = pd.read_csv(SUST_HOTEL_DATA_PATH)\n",
     "SUST_HOTEL_DATA['HOTEL_SUSTAINABLE'] = \"YES\"\n",
     "\n",
-    "SUST_HOTEL_DATA"
+    "HOTEL_DATA = pd.concat([NONSUST_HOTEL_DATA, SUST_HOTEL_DATA])"
    ]
   },
   {
@@ -411,7 +411,7 @@
     "\n",
     "cluster_model = KMeans(n_clusters=50)\n",
     "topic_model = BERTopic(hdbscan_model=cluster_model)\n",
-    "topics, probabilities = topic_model.fit_transform(SUST_COMMENTS)"
+    "topics, probabilities = topic_model.fit_transform(HOTEL_DATA)"
    ]
   },
   {
@@ -5452,6 +5452,27 @@
    ],
    "source": [
     "topic_model.visualize_topics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'topic_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_186848/1879229866.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtopic_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNONSUST_HOTEL_DATA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'topic_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "topic_model.transform(NONSUST_HOTEL_DATA[:2])"
    ]
   }
  ],
